Update license
Also add proper package detail, initial metadata import
Fix Angular build
Update API
